[build-system]
requires      = ["pdm-backend", "versioningit"]
build-backend = "pdm.backend"

[project]
name = "eyrie"
version = "0.0.1.dev2+g5e8b84c"
description = "Your SDLC in a bin."
readme = "README.md"
requires-python = "<4.0,>=3.12"
keywords = []
authors = [{ name = "Ada Wright", email = "ada@hpk.io" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "pyyaml>=6.0.1",
  "click>=8.1.7",
  "versioningit>=3.1.1",
  "pexpect>=4.9.0",
  "pydantic>=2.7.1",
  "pydantic-settings>=2.2.1",
  "semver>=3.0.2",
  "tomlkit>=0.12.5",
]

[project.license]
text = "MIT"

[project.scripts]
eyrie-cli = "eyrie.cli:cli"

[project.urls]
Documentation = "https://github.com/hipikat/eyrie#readme"
Issues        = "https://github.com/hipikat/eyrie/issues"
Source        = "https://github.com/hipikat/eyrie"

[tool.coverage.run]
source_pkgs = ["eyrie", "tests"]
branch      = true
parallel    = true
omit        = ["src/eyrie/__about__.py"]

[tool.coverage.paths]
eyrie = ["src/eyrie", "*/eyrie/src/eyrie"]
tests = ["tests", "*/eyrie/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.pdm.build]
includes = ["config/*.yaml"]

[tool.pdm.dev-dependencies]
dev = ["pip>=24.0", "pdbpp>=0.10.3", "bpython>=0.24"]

[tool.versioningit.format]
distance       = "{version}.dev{distance}+{vcs}{rev}"
dirty          = "{version}+dirty"
distance-dirty = "{version}.dev{distance}+{vcs}{rev}.dirty"

[tool.versioningit.vcs]
method      = "git"
match       = ["v*"]
default-tag = "v0.0.0"

[tool.versioningit.tag2version]
method        = "basic"
regex         = "^v(\\d+\\.\\d+\\.\\d+)(?:-([0-9A-Za-z-]+(?:\\.[0-9A-Za-z-]+)*))?(?:\\+([0-9A-Za-z-]+(?:\\.[0-9A-Za-z-]+)*))?$"
require-match = true

[tool.versioningit.write]
file = "src/eyrie/__version__.py"

[tool.ruff]
line-length    = 100
indent-width   = 4
target-version = "py312"

[tool.ruff.format]
quote-style                = "single"
indent-style               = "space"
docstring-code-format      = true
docstring-code-line-length = "dynamic"
